--- a/index.html
+++ b/index.html
@@ -14,17 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" >-->
 </head>
 <body>
-  <!-- HEADER -->
-  <header></header>
-  <!-- MAIN -->
-  <main>
-    <!-- SECTION-1 -->
-    <section></section>
-    <!-- SECTION-2 -->
-    <section></section>
-  </main>
-  <!-- FOOTER -->
-  <footer></footer>
-  <!-- MODAL --> 
+  <ul>
+    <li><a href="./01-hw-index.html">Завдання 1</a></li>
+    <li><a href="./02-hw-index.html">Завдання 2</a></li>
+    <li><a href="./03-hw-index.html">Завдання 3</a></li>
+    <li><a href="./04-hw-index.html">Завдання 4</a></li>
+    <li><a href="./05-hw-index.html">Завдання 5</a></li>
+    <li><a href="./06-hw-index5.html">Завдання 6</a></li>
+  </ul>
 </body>
 </html>
