--- a/06-hw-index5.html
+++ b/06-hw-index5.html
@@ -20,6 +20,6 @@
     <button type="button" data-destroy>Destroy</button>
   </div>
   <div id="boxes"></div>  
-  <script src="./js/task-6.js"></script>
+  <script src="./js/task-6.js" type="module"></script>
 </body>
 </html>
